# traffic_management_solution

./: README.md
mir_robot/mir_description/urdf/include/: mir_100.gazebo.xacro  sick_s300.urdf.xacro
traffic_management/: CMakeLists.txt  global_planner_plugin.xml  package.xml  restricted_areas.xml  traffic_lanes.xml
traffic_management/config/: mir_spawner_params.yaml  mir_spawner_params_with_traffic_management.yaml  spawn_world_params.yaml
traffic_management/include/: restricted_areas.hpp  tm_navfn.hpp  tm_navfn_planner.hpp  traffic_lanes.hpp
traffic_management/launch/: export.txt  mir_gazebo_launch.py  mir_spawner.py  spawn_world.py
traffic_management/launch/include/: amcl.py  mir_gazebo_common.py  navigation.py  navigation_with_filters.py
traffic_management/maps/: tests_mini_warehouse.pgm  tests_mini_warehouse.yaml  tests_mini_warehouse_traffic_lanes.pgm  tests_mini_warehouse_traffic_lanes.yaml
traffic_management/models/cardboard_box/: model.config  model.sdf
traffic_management/models/warehouse_world/walls/: model.sdf
traffic_management/rviz/: three_mirs.rviz
traffic_management/scripts/: job_scheduler.py  robot_navigator.py  robot_tracker.py  test.py
traffic_management/src/: restricted_areas.cpp  tm_navfn.cpp  tm_navfn_planner.cpp  traffic_lanes.cpp
traffic_management/worlds/: mini_warehouse_tests.world
